add title input
